language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_float_operator_on_ints.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1 >=. 2\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  1 >=. 2
  ↑      
}


----- AFTER ACTION

pub fn main() {
  1 >= 2
}
