language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_float_operator_on_ints_3.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1 *. wobble()\n}\n\nfn wobble() { 3 }\n"
---
----- BEFORE ACTION

pub fn main() {
  1 *. wobble()
    ↑          
}

fn wobble() { 3 }


----- AFTER ACTION

pub fn main() {
  1 * wobble()
}

fn wobble() { 3 }
