language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_float_operator_on_ints_in_guards_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  case todo {\n    _ if 1 -. 2 -> todo\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  case todo {
    _ if 1 -. 2 -> todo
         ▔▔▔▔▔↑        
  }
}


----- AFTER ACTION

pub fn main() {
  case todo {
    _ if 1 - 2 -> todo
  }
}
