language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_int_operator_on_floats_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1.12 - 2.0\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  1.12 - 2.0
  ▔▔▔▔▔▔▔↑  
}


----- AFTER ACTION

pub fn main() {
  1.12 -. 2.0
}
