language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_int_operator_on_floats_3.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1.3 * wobble()\n}\n\nfn wobble() { 3.2 }\n"
---
----- BEFORE ACTION

pub fn main() {
  1.3 * wobble()
      ↑         
}

fn wobble() { 3.2 }


----- AFTER ACTION

pub fn main() {
  1.3 *. wobble()
}

fn wobble() { 3.2 }
