language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_int_operator_on_floats_in_guards_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  case todo {\n    _ if 1.12 - 2.0 -> todo\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  case todo {
    _ if 1.12 - 2.0 -> todo
         ▔▔▔▔▔▔▔↑          
  }
}


----- AFTER ACTION

pub fn main() {
  case todo {
    _ if 1.12 -. 2.0 -> todo
  }
}
