language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_int_operator_on_floats_in_guards_3.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let wobble = 3.2\n  case todo {\n    _ if 1.3 * wobble -> todo\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let wobble = 3.2
  case todo {
    _ if 1.3 * wobble -> todo
             ↑               
  }
}


----- AFTER ACTION

pub fn main() {
  let wobble = 3.2
  case todo {
    _ if 1.3 *. wobble -> todo
  }
}
